# CustomInstaller

./: CMakeLists.txt  README.md  app.manifest  installer.cpp  resource.rc  translations.h
